corrects icon alignment in socials
and the margin of its title across all screen sizes.

--- a/css/style.css
+++ b/css/style.css
@@ -3221,6 +3221,12 @@ form.search-form::after {
   }
 }
 
+@media screen and (min-width: 1260px) {
+  .footer-heading {
+    padding-bottom: 10px;
+  }
+}
+
 .footer-links {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3229,6 +3235,7 @@ form.search-form::after {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-size: 13px;
 }
 
 @media screen and (max-width: 768px) {
@@ -3293,12 +3300,16 @@ form.search-form::after {
 
 address {
   font-style: normal;
-  font-size: 0.8rem;
+  font-size: 13px;
   line-height: 1.25rem;
 }
 
 address a {
   margin: 1rem 0;
+}
+
+.footer-gorleston {
+  font-size: 13px;
 }
 
 @media screen and (max-width: 768px) {
@@ -3341,6 +3352,30 @@ address a {
           flex-direction: column;
 }
 
+@media screen and (max-width: 768px) {
+  .socials {
+    margin-top: -24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .socials {
+    margin-top: -24px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .socials {
+    margin-top: -24px;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .socials {
+    margin-top: -24px;
+  }
+}
+
 .socials-top,
 .socials-bottom {
   display: -webkit-box;
@@ -3372,9 +3407,6 @@ address a {
 }
 
 .facebook {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
   margin-top: 30px;
   margin-right: 30px;
   display: -webkit-box;
@@ -3386,16 +3418,45 @@ address a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .facebook {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 211.5px;
+            flex: 1 0 211.5px;
+    height: 55px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .facebook {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 157.5px;
+            flex: 1 0 157.5px;
+    height: 55px;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .facebook {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 120px;
+            flex: 1 0 120px;
+    height: 55px;
+  }
 }
 
 .facebook:hover {
   background-color: #43609C;
 }
 
+.facebook i {
+  position: relative;
+  top: 6px;
+}
+
 .twitter {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
   margin-top: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3408,14 +3469,43 @@ address a {
           align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  .twitter {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 211.5px;
+            flex: 1 0 211.5px;
+    height: 55px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .twitter {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 157.5px;
+            flex: 1 0 157.5px;
+    height: 55px;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .twitter {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 120px;
+            flex: 1 0 120px;
+    height: 55px;
+  }
+}
+
 .twitter:hover {
   background-color: #55acee;
 }
 
+.twitter i {
+  position: relative;
+  top: 6px;
+}
+
 .insta {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
   margin-top: 30px;
   margin-right: 30px;
   display: -webkit-box;
@@ -3429,8 +3519,40 @@ address a {
           align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  .insta {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 211.5px;
+            flex: 1 0 211.5px;
+    height: 55px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .insta {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 157.5px;
+            flex: 1 0 157.5px;
+    height: 55px;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .insta {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 120px;
+            flex: 1 0 120px;
+    height: 55px;
+  }
+}
+
 .insta:hover {
   background-color: #DD2A7B;
+}
+
+.insta i {
+  position: relative;
+  top: 6px;
 }
 
 .linkedin {
@@ -3449,8 +3571,40 @@ address a {
           align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  .linkedin {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 211.5px;
+            flex: 1 0 211.5px;
+    height: 55px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .linkedin {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 157.5px;
+            flex: 1 0 157.5px;
+    height: 55px;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .linkedin {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 120px;
+            flex: 1 0 120px;
+    height: 55px;
+  }
+}
+
 .linkedin:hover {
   background-color: #0072B1;
+}
+
+.linkedin i {
+  position: relative;
+  top: 6px;
 }
 
 .sitemap-wrapper {
